fixed the error with the project-divs, fixed the alignment of the skills section pictures

--- a/main.css
+++ b/main.css
@@ -170,41 +170,45 @@ header li a {
 }
 
 .skills-div {
-    background-color:rgb(40,136,187);
-    height: 600px;
+    background-color: rgb(40, 136, 187);
     color: white;
-    margin-top: -70px;
     padding-top: 30px;
+    text-align: center;
+    margin-top: -70px;
+}
+
+.skills-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill-item {
+    margin: 10px;
     text-align: center;
 }
 
-.float-skill-pic {
-    margin-right: 50px;
-    float: left;
+.skill-item img {
+    display: block;
+    margin: 0 auto;
+}
+
+.skill-item h3 {
     margin-top: 10px;
-    margin-left: 500px;
-}
-
-
-.skills-pic-python {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 0px;
-}
-
-.skills-pic-python h3 {
-    padding-right: -400px;
 }
 
 #projects {
-    background-color: rgb(248,208,184);
+    background-color: rgb(248, 208, 184);
     margin-top: -31px;
     height: 750px;
-    padding-top: 100px;
-    border-radius: 12px;
+    padding-top: 10px;
 }
 
+#projects h1 {
+    font-weight: 100;
+    text-align: center;
+    padding-top: 0px;
+}
 
 .project-div {
     background-color: whitesmoke;
@@ -214,15 +218,35 @@ header li a {
     display: inline-block;
     margin-top: 20px;
     border-radius: 12px;
+    cursor: pointer;
+    position: relative; /* Added position relative */
 }
 
-#project4, #project5, #project6 {
+.project-div .description {
+    display: none;
+    position: absolute;
+    top: 50%; /* Position at the center vertically */
+    left: 50%; /* Position at the center horizontally */
+    transform: translate(-50%, -50%); /* Center the description */
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    width: 90%;
+    text-align: center;
+    z-index: 2; /* Ensure description is on top */
+}
+
+#project4,
+#project5,
+#project6 {
     margin-top: 0px;
 }
 
-#project1, #project4 {
+#project1,
+#project4 {
     margin-left: 350px;
 }
+
 
 #contact-me-section {
     background-color: whitesmoke;
